--- a/proteinfood/proteinfood.html
+++ b/proteinfood/proteinfood.html
@@ -39,53 +39,53 @@
               </section>
                 <tr>
                     <td>Chicken Breast</td>
-                    <td>43g</td>
+                    <td>43grams</td>
                     <td>1 Cup</td>
                     
                 </tr>
                 <tr>
                     <td>Beef</td>
-                    <td>22g</td>
+                    <td>22grams</td>
                     <td>3oz</td>
                 </tr>
                 <tr>
                     <td>Pork</td>
-                    <td>23g</td>
+                    <td>23grams</td>
                     <td>3oz</td>
                 </tr>
                 <tr>
                     <td>Turkey</td>
-                    <td>24g</td>
+                    <td>24grams</td>
                     <td>3oz</td>
                 </tr>
                 <tr>
                     <td>Lamb</td>
-                    <td>21g</td>
+                    <td>21grams</td>
                     <td>3oz</td>
                 </tr>
                 <tr>
                     <td>Broccoli</td>
-                    <td>2.6g</td>
+                    <td>2.6grams</td>
                     <td>1 Cup</td>
                 </tr>
                 <tr>
                     <td>Grean Pea</td>
-                    <td>8g</td>
+                    <td>8grams</td>
                     <td>1 Cup</td>
                 </tr>
                 <tr>
                     <td>Avocado</td>
-                    <td>3g</td>
+                    <td>3grams</td>
                     <td>1 Avocado</td>
                 </tr>
                 <tr>
                     <td>Kale</td>
-                    <td>2.9g</td>
+                    <td>2.9grams</td>
                     <td>1 Cup</td>
                 </tr>
                 <tr>
                     <td>Asparagus</td>
-                    <td>2.9g</td>
+                    <td>2.9grams</td>
                     <td>1 Cup</td>
                 </tr>
 
